# FP-Strukdat-Kel7

./: CMakeLists.txt  README.md  cpp_backup.cpp  kode_temp.txt  main.cpp  notes.txt
